tests/errors/test_25.x
// Loop iterators are not integers

fn main() -> void {

    loop i in true {

    }

    loop i in false 10 {

    }

}